2001-10-10  Havoc Pennington  <hp@redhat.com>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_set_ui): fix docs to
	reflect that arg should be datadir not prefix
	(bonobo_ui_util_get_ui_fname): fix docs to reflect that arg should 
	be datadir not prefix

2001-10-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_get_ui_fname):
	update to allow absolute file name paths, and fall back to
	a straight prefix / file_name conflation.
	version gnome-2.0/ui

	* bonobo/Makefile.am (BONOBOUIDIR): version dir.

	* bonobo/bonobo-socket.c (bonobo_socket_destroy): rename to
	(bonobo_socket_finalize): and finalize instead.
	(bonobo_socket_class_init): upd.

2001-10-05  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-util.c (lookup_stock_compat): rename
	gnome-stock-pixmap- prefix to gnome-stock- for compat.

2001-10-08  Abel Cheung  <maddog@linux.org.hk>

	* samples/controls/*: Rename bonobo-sample-controls ->
	  bonobo-sample-controls-2 , to enable parallel install
	  with bonobo 1.0.x .

2001-09-27  Michael Meeks  <michael@ximian.com>

	* Version 1.103

2001-09-25  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-ui-util.c: (lookup_stock_compat):
	Update for change in g_ascii_strdown API.

2001-09-24  Havoc Pennington  <hp@redhat.com>

	* autogen.sh, configure.in: destroy CERTIFIED_GNOMIE

2001-09-22  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Added zh_CN for Simplified Chinese.

2001-06-21  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Catalan (ca) to $ALL_LINGUAS

2001-09-20  Frank Belew <frb@ximian.com>

	* configure.in: removed AM_CONDITIONAL(FALSE...)

2001-09-20  Fatih Demir <kabalak@gtranslator.org>

	* configure.in: Added "ta" to the languages list.

2001-09-19  Darin Adler  <darin@bentspoon.com>

	* bonobo/bonobo-control.c: (impl_Bonobo_Control_setWindowId):
	Fix parameter type to match new ORBit rules for string-like types.

	* bonobo/bonobo-file-selector-util.c: Add missing include of