@@ -1,3 +1,9 @@
+2001-10-16  Michael Meeks  <michael@ximian.com>
+
+	* tests/test-moniker.c (display_as_stream): split chunks
+	into (dump_stream): here.
+	(disp_stream_async_cb, display_as_stream_async): impl.
+
 2001-10-10  Havoc Pennington  <hp@redhat.com>
 
 	* bonobo/bonobo-ui-util.c (bonobo_ui_util_set_ui): fix docs to
